# fluidika

./: .gitignore  CMakeLists.txt  README.md  environment.devenv.yml  install
Fluidik/: CMakeLists.txt
Fluidik/Common/: Constants.hpp  Exception.hpp  Real.hpp  StateOfMatter.hpp  StringUtils.hpp
Fluidik/Water/: Water.cpp  Water.hpp  WaterData.cpp  WaterData.hpp  WaterData.test.cxx  WaterProps.hpp
Fluidik/Water/ElectroModels/: HelgesonKirkham.cpp  HelgesonKirkham.hpp  JohnsonNorton.cpp  JohnsonNorton.hpp  JohnsonNorton.test.cxx  UematsuFranck.cpp  UematsuFranck.hpp  UematsuFranck.test.cxx
Fluidik/Water/ThermoModels/: HGK.cpp  HGK.hpp  HGK.test.cxx  Utils.cpp  Utils.hpp  WagnerPruss.cpp  WagnerPruss.hpp  WagnerPruss.test.cxx
Fluidika/: CMakeLists.txt  Fluidika.hpp  Fluidika.test.cxx
Fluidika/Common/: Constants.hpp  Exception.hpp  Real.hpp  StateOfMatter.hpp  StringUtils.hpp
Fluidika/Water/: Water.cpp  Water.hpp  WaterData.cpp  WaterData.hpp  WaterData.test.cxx  WaterProps.hpp
Fluidika/Water/ElectroModels/: HelgesonKirkham.cpp  HelgesonKirkham.hpp  JohnsonNorton.cpp  JohnsonNorton.hpp  JohnsonNorton.test.cxx  UematsuFranck.cpp  UematsuFranck.hpp  UematsuFranck.test.cxx
Fluidika/Water/ThermoModels/: HGK.cpp  HGK.hpp  HGK.test.cxx  Utils.cpp  Utils.hpp  WagnerPruss.cpp  WagnerPruss.hpp  WagnerPruss.test.cxx
cmake/: CCache.cmake
cmake/FindDeps/: All.cmake  Private.cmake  Public.cmake
cmake/PackageFinding/: Config.cmake.in  Enable.cmake
data/: water-properties-iapws1995.xlsx
examples/cmake-project/: CMakeLists.txt  README.md  main.cpp
notes/: how-to-calculate-speed-of-water.lyx
